-Updated code to use JQuery typing, custom MediaWiki typing, and an extended window; window calls no longer use <any>
-Added wikia-chiclet-button to CSS for UCP support
-Removed old code / messages about Wikia Maps feature, as it has been removed
-Converted rc "arr_" images to CSS as uri data. This was done for 2 reasons:
	-Encase those png image are ever removed (since they are no longer used on UCP)
	-To be more efficient (better than manually having an img tag each time)
-As translation data is now in a JSON and can't have comments, I'm putting all the names of people who translated in the past here:
	[be] Беларуская (BELARUSIAN)                     @author: Mix Gerder
	[ca] Català (CATALAN)                            @author: Josep Maria Roca Peña
	[de] Deutsch (German)                            @author: Cyanide3, Dragon Rainbow, SpacePucky
	[es] Español (SPANISH)                           @author: Paynekiller92
	[gl] Galego (GALICIAN)                           @author: Josep Maria Roca Peña
	[it] Italiano (ITALIAN)                          @author: Leviathan 89
	[ja] 日本語 (JAPANESE)                            @author: [anonymous]
	[nl] Nederlands (DUTCH)                          @author: Mainframe98
	[oc] Occitan (OCCITAN)                           @author: Josep Maria Roca Peña
	[pl] Polski (POLISH)                             @author: Szynka013, Matik7
	[pt] Português europeu (PORTUGUESE EUROPE)       @author: Josep Maria Roca Peña
	[pt-br] Português brasileiro (PORTUGUESE BRAZIL) @author: DannielaServer
	[ro] Română (ROMANIAN)                           @author: Josep Maria Roca Peña
	[ru] Русский (RUSSIAN)                           @author: Mix Gerder
	[tr] Türkçe (TURKISH)                            @author: BaRaN6161TURK
	[uk] Українська (UKRAINIAN)                      @author: Mix Gerder
	[val] Valencià (VALENCIAN)                       @author: Josep Maria Roca Peña
	[vi] Vietnamese                                  @author: Dai ca superman