@@ -253,6 +253,11 @@ table.mw-enhanced-rc {
 	.wikia-gallery-item { width:@gallerySize; }
 	.thumb { height:@gallerySize; }
 	.image-no-lightbox { width:@gallerySize; }
+	
+	.rcm-ajaxIcon {
+		color:black;
+		margin-left: 2px;
+	}
 }
 
 //#############################
