@@ -9,6 +9,7 @@
 -Updated code to use JQuery typing, custom MediaWiki typing, and an extended window; window calls no longer use <any>
 -Added wikia-chiclet-button to CSS for UCP support
 -Removed old code / messages about Wikia Maps feature, as it has been removed
+-Tweaked gallery modal so clicking image brings you to wiki page, and viewing image uses a new button next to caption
 -Converted rc "arr_" images to CSS as uri data. This was done for 2 reasons:
 	-Encase those png image are ever removed (since they are no longer used on UCP)
 	-To be more efficient (better than manually having an img tag each time)
